--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4==4.12.2
-Flask==3.0.0
+Flask[async]==3.0.0
 googlesearch_python==1.2.3
 numpy==1.26.2
 pandas==2.1.4
@@ -8,7 +8,6 @@ requests==2.31.0
 scikit_learn==1.2.2
 whois==0.9.27
 gunicorn==21.2.0
-django-googlesearch==0.2
 httpx==0.25.2
 pymongo==4.6.1
 openai==1.6.0
