--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@table-library/react-table-library": "^4.1.7",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jssoup": "^0.0.15",
     "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.21.0",
     "react-typewriter-hook": "^1.0.2",
     "typewriter-effect": "^2.21.0"
