--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ httpx==0.25.2
 pymongo==4.6.1
 openai==1.6.0
 flask_cors
+django-googlesearch==0.2
+twilio==8.11.0
+Pillow==10.1.0
+torch==2.1.2
+pytorchcv==0.0.67
+pytesseract==0.3.10
