--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^9.1.3",
     "react-typewriter-hook": "^1.0.2",
     "typewriter-effect": "^2.21.0"
   }
